[package]
name = "hako"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
nix = { version = "0.29.0", features = ["sched", "fs", "mount", "socket"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
